# vinted_autolister

./: .gitignore  README.md  pyproject.toml  requirements.txt  structure.txt  vinted_autolister.py  vinted_autolister_(complete for debug).py
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  main.js  styles.css
frontend/components/: aiGenerator.js  formValidator.js  previewUpdater.js  uiHelpers.js  upload.js
models/: price.py
src/: cli.py  main.py
src/api/: middleware.py  routes.py
src/config/: logging.py  settings.py
src/core/: autolister.py  content_generator.py  price_analyzer.py  price_scraper.py  vision_analyzer.py
src/models/: listing.py  price.py  product.py
src/services/: cache_service.py  openai_service.py  scraping_service.py
src/ui/componenents/: export.py  preview.py  upload.py
src/ui/components/: export.py  preview.py  upload.py
src/ui/pages/: main.py
src/utils/: image_utils.py  text_utils.py  validation.py
