# ============================================================================
# FILE: pyproject.toml
# Poetry config
# ============================================================================

[tool.poetry]
name = "vinted-autolister"
version = "0.1.0"
description = "Applicazione per generare automaticamente annunci Vinted da immagini"
authors = ["Il Tuo Nome <tua@email.com>"]
license = "MIT"
readme = "README.md"

# Includi i moduli reali (quelli dentro src/)
packages = [
    { include = "ui", from = "src" },
    { include = "core", from = "src" },
    { include = "utils", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.28.0"
openai = "^0.28.0"
pillow = "^10.0.0"
pydantic = "^2.0.0"
aiohttp = "^3.8.0"
beautifulsoup4 = "^4.12.0"
python-dotenv = "^1.0.0"
fake-useragent = "^1.1.3"
httpx = "^0.25.0"
uvicorn = "^0.23.0"
fastapi = "^0.103.0"
python-multipart = "^0.0.6"
loguru = "^0.7.0"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
mypy = "^1.5.0"
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "test_*.py"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "B", "C", "N", "RUF"]
ignore = ["E501"]
target-version = "py39"
